--- a/loki/loki-config.yaml
+++ b/loki/loki-config.yaml
@@ -22,9 +22,8 @@ schema_config:
       prefix: index_
       period: 24h
 
-limits_config:
-  max_query_lookback: 672h  # 28 дней
-  retention_period: 672h   
+limits_config: 
+  retention_period: 672h   # 28 дней
 
 
 storage_config:
