--- a/alertmanager/alertmanager.yaml
+++ b/alertmanager/alertmanager.yaml
@@ -27,26 +27,27 @@ receivers:
         send_resolved: true
         message: |
           {{ if eq .Status "firing" }}🚨 WARNING!
-          {{ range .GroupLabels.SortedPairs }}{{ if eq .Name "server" }}{{ .Value }} имеет проблемы:
-          {{ end }}{{ end }}
+
+          {{ range .GroupLabels.SortedPairs }}{{ if eq .Name "server" }}<b>{{ .Value }}</b> имеет проблемы:{{ end }}{{ end }}
           {{ range .Alerts }}
           🔴 {{ .Labels.alertname }}
-          Описание: {{ .Annotations.summary }}
-          Доп. писание: {{ .Annotations.description }}
-          Начало: {{ (.StartsAt | tz "Etc/GMT-5") | date "15:04 02-01-2006 MST" }}
-          Серьезность: {{ .Labels.severity }}
+          <b>Описание:</b> {{ .Annotations.summary }}
+          <b>Доп. писание:</b> {{ .Annotations.description }}
+          <b>Начало:</b> {{ (.StartsAt | tz "Etc/GMT-5") | date "15:04 02-01-2006 MST" }}
+          <b>Серьезность:</b> {{ .Labels.severity }}
           {{ end }}
 
           {{ else if eq .Status "resolved" }}✅ Resolved.
-          {{ range .GroupLabels.SortedPairs }}{{ if eq .Name "server" }}{{ .Value }} проблемы решены:
+
+          {{ range .GroupLabels.SortedPairs }}{{ if eq .Name "server" }}<b>{{ .Value }}</b> проблемы решены:
           {{ end }}{{ end }}
           {{ range .Alerts }}
           🟢 {{ .Labels.alertname }}
-          Описание: {{ .Annotations.summary }}
-          Доп. писание: {{ .Annotations.description }}
-          Начало: {{ (.StartsAt | tz "Etc/GMT-5") | date "15:04 02-01-2006 MST" }}
-          Решено: {{ (.EndsAt | tz "Etc/GMT-5") | date "15:04 02-01-2006 MST" }}
-          Серьезность: {{ .Labels.severity }}
+          <b>Описание:</b> {{ .Annotations.summary }}
+          <b>Доп. писание:</b> {{ .Annotations.description }}
+          <b>Начало:</b> {{ (.StartsAt | tz "Etc/GMT-5") | date "15:04 02-01-2006 MST" }}
+          <b>Решено:</b> {{ (.EndsAt | tz "Etc/GMT-5") | date "15:04 02-01-2006 MST" }}
+          <b>Серьезность:</b> {{ .Labels.severity }}
           {{ end }}
           {{ end }}
   - name: 'telegram2'
@@ -56,18 +57,17 @@ receivers:
         send_resolved: false  # Не отправлять уведомления о resolved.
         message: |
           {{ if eq .Status "firing" }}⚠️ Attention!
-          {{ range .GroupLabels.SortedPairs }}{{ if eq .Name "server" }}{{ .Value }} внимание:
-          {{ end }}{{ end }}
+          
+          {{ range .GroupLabels.SortedPairs }}{{ if eq .Name "server" }}<b>{{ .Value }}</b> внимание:{{ end }}{{ end }}
           {{ range .Alerts }}
           🟡 {{ .Labels.alertname }}
-          Описание: {{ .Annotations.summary }}
-          Доп. описание: {{ .Annotations.description }}
-          Начало: {{ (.StartsAt | tz "Etc/GMT-5") | date "15:04 02-01-2006 MST" }}
-          Серьезность: {{ .Labels.severity }}
+          <b>Описание:</b> {{ .Annotations.summary }}
+          <b>Доп. описание:</b> {{ .Annotations.description }}
+          <b>Начало:</b> {{ (.StartsAt | tz "Etc/GMT-5") | date "15:04 02-01-2006 MST" }}
+          <b>Серьезность:</b> {{ .Labels.severity }}
           {{ end }}
           {{ end }}
 #https://api.telegram.org/botTHERE_TOKEN/getUpdates 
 
  # tz "Etc/GMT-5" = часовой пояс +5, изменить на нужный 
 
- 
