--- a/prometheus/alert_rules.yaml
+++ b/prometheus/alert_rules.yaml
@@ -3,7 +3,7 @@ groups:
     rules:
 
       - alert: HIGH_CPU_USAGE  # Название алерта
-        expr:  1 - (sum(rate(node_cpu_seconds_total{mode="idle", job="node_exporter" }[30s])) by (instance, server) / sum(rate(node_cpu_seconds_total{job="node_exporter"}[30s])) by (instance, server)) > 0.9  
+        expr:  1 - (sum(rate(node_cpu_seconds_total{mode="idle", job="node_exporter" }[1m])) by (instance, server) / sum(rate(node_cpu_seconds_total{job="node_exporter"}[1m])) by (instance, server)) > 0.9  
         for: 1s  # Если условие выполняется более 1s 
         labels:
           severity: Critical  # Степень важности алерта
@@ -12,7 +12,7 @@ groups:
           description: "-"
 
       - alert: HIGH_RAM_USAGE  # Название алерта
-        expr:   1-(sum(rate(node_cpu_seconds_total{mode="idle", job="node_exporter" }[30s])) by (server) / sum(rate(node_cpu_seconds_total{job="node_exporter"}[30s])) by (server)) > 0.9
+        expr:   1-(sum(rate(node_cpu_seconds_total{mode="idle", job="node_exporter" }[1m])) by (server) / sum(rate(node_cpu_seconds_total{job="node_exporter"}[1m])) by (server)) > 0.9
         for: 1s  # Если условие выполняется более 1s 
         labels:
           severity: Critical  # Степень важности алерта
