--- a/alertmanager/alertmanager.yaml
+++ b/alertmanager/alertmanager.yaml
@@ -14,14 +14,16 @@ route:
       receiver: 'telegram'  # Получатель для критических алертов.
       group_wait: 10s  # Время ожидания для сбора алертов до отправки первого уведомления для критических.
       group_interval: 5s  # Интервал между группами уведомлений для критических.
-      repeat_interval: 5m  # Интервал повторных уведомлений для критических.
+      repeat_interval: 30s  # Интервал повторных уведомлений для критических.
+      resolve_timeout: 2m  # Время ожидания для уведомления о решении критического алерта.
 
     - match:
         severity: 'Warning'  # Алерты с предупреждением.
       receiver: 'telegram2'  # Получатель для предупреждений.
       group_wait: 10s  # Время ожидания для сбора алертов до отправки первого уведомления для предупреждений.
       group_interval: 5s  # Интервал между группами уведомлений для предупреждений.
-      repeat_interval: 1h  # Интервал повторных уведомлений для предупреждений.
+      repeat_interval: 30s  # Интервал повторных уведомлений для предупреждений.
+      resolve_timeout: 2m  # Время ожидания для уведомления о решении предупреждения.
 
 receivers:
   - name: 'telegram'
